--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,6 +7,33 @@
   padding-left: 1.6666666667rem;
 }
 
+.main-banner div {
+  position: relative;
+  background-color: #000;
+}
+.main-banner div video {
+  width: 100%;
+  max-height: 100vh;
+}
+.main-banner div div {
+  position: absolute;
+  top: 0;
+  left: 10%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  color: #fff;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+.main-banner div div h1 {
+  margin-bottom: 0;
+}
+.main-banner div div p {
+  font-size: 63px;
+}
+
 .main-nav {
   width: 100%;
   background-color: rgba(0, 0, 0, 0);
@@ -64,6 +91,10 @@ h3,
 h4,
 .h4 {
   font-size: 3.1111111111rem;
+}
+
+p {
+  font-size: 1.3888888889rem;
 }
 
 body {
