--- a/src/styles/navbar/_styles.scss
+++ b/src/styles/navbar/_styles.scss
@@ -1,10 +1,48 @@
+@use "../utilities/functions" as utilFun;
+
 .main-nav {
   width: 100%;
   background-color: rgba(0, 0, 0, 0);
+  position: absolute;
+  z-index: 1;
+  padding: {
+    top: utilFun.pxToRem(10px);
+    bottom: 0;
+  }
+  div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  img {
+    width: 131px;
+  }
   ul {
     width: 100%;
     display: flex;
+    justify-content: center;
     list-style: none;
     gap: 10px;
+    a {
+      text-decoration: none;
+      color: #fff;
+      transition: color 0.2s;
+      &:hover {
+        color: #f48720;
+      }
+    }
+  }
+  form {
+    display: flex;
+    gap: 15px;
+    input {
+      color: #fff;
+      background-color: rgba(0, 0, 0, 0.5);
+      border: none;
+      border-bottom: 3px solid #fff;
+      &:focus {
+        outline: none;
+      }
+    }
   }
 }
