--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -31,18 +31,53 @@
   margin-bottom: 0;
 }
 .main-banner div div p {
-  font-size: 63px;
+  line-height: unset;
+  font-size: 3.5rem;
 }
 
 .main-nav {
   width: 100%;
   background-color: rgba(0, 0, 0, 0);
+  position: absolute;
+  z-index: 1;
+  padding-top: 0.5555555556rem;
+  padding-bottom: 0;
+}
+.main-nav div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-nav img {
+  width: 131px;
 }
 .main-nav ul {
   width: 100%;
   display: flex;
+  justify-content: center;
   list-style: none;
   gap: 10px;
+}
+.main-nav ul a {
+  text-decoration: none;
+  color: #fff;
+  transition: color 0.2s;
+}
+.main-nav ul a:hover {
+  color: #f48720;
+}
+.main-nav form {
+  display: flex;
+  gap: 15px;
+}
+.main-nav form input {
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  border-bottom: 3px solid #fff;
+}
+.main-nav form input:focus {
+  outline: none;
 }
 
 body > section > h1 {
@@ -94,6 +129,8 @@ h4,
 }
 
 p {
+  max-width: 70ch;
+  line-height: 150%;
   font-size: 1.3888888889rem;
 }
 
