--- a/src/styles/navbar/_styles.scss
+++ b/src/styles/navbar/_styles.scss
@@ -16,13 +16,14 @@
   }
   img {
     width: 131px;
+    margin-right: 73px;
   }
   ul {
     width: 100%;
     display: flex;
     justify-content: center;
     list-style: none;
-    gap: 10px;
+    gap: 20px;
     a {
       text-decoration: none;
       color: #fff;
@@ -33,6 +34,7 @@
     }
   }
   form {
+    width: 400px;
     display: flex;
     justify-content: flex-end;
     gap: 15px;
@@ -48,6 +50,9 @@
       &:focus {
         outline: none;
       }
+    }
+    #searchBtn {
+      cursor: pointer;
     }
   }
 }
